package _1_创建型模式._2_工厂_Factory._3_工厂方法模式.order;

public class PizzaStore {
    public static void main(String[] args) {
        new OrderPizza();
    }
}
